# severity-eval

./: .env.example  .gitignore  PLAN.md  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
experiments/: VLLM_BACKEND.md  analysis.py  baseline_predict.py  bench_inference.py  bench_inference_unsloth.py  bench_unsloth_vs_vllm.sh  check_env.sh  cleanup.sh  diagnose_batch_errors.sh  evaluate_local_vllm.py  evaluate_models.py  figures.py  fix_flashinfer_nvcc.sh  fix_vllm_runtime.sh  run_ablation.sh  run_all.sh  run_experiments.sh  run_full_pipeline.sh  run_local.sh  run_local_3way.sh  run_local_large.sh  run_local_mixed.sh  run_local_sequential_tp.sh  run_local_small.sh  run_local_smoke.sh  run_local_smoke_parallel.sh  run_per_gpu.sh  run_thinking_tp.sh  setup_env.sh  summarize_smoke.py  test_hypotheses.py  validate_severity_llm.py  validate_severity_output_llm.py
experiments/datasets/: load_contractnli.py  load_cuad.py  load_ddi.py  load_financebench.py  load_finqa.py  load_headqa.py  load_judgebert.py  load_maud.py  load_medcalc.py  load_medmcqa.py  load_medqa.py  load_privacyqa.py  load_rag_insurance.py  load_tatqa.py
paper/: REVIEW.md  main.tex  prompt_documentation.tex  references.bib  severity-annotation-guidelines.tex  severity-scales-all-domains.tex
paper/tables/: table_h1.tex  table_h4.tex  table_main.tex
results/: table_h1.tex  table_h4.tex  table_main.tex
src/severity_eval/: __init__.py  api.py  compound_loss.py  metric.py  risk_measures.py  routing.py  ruin.py  sensitivity.py  taxonomy.py  validation.py  visualization.py
tests/: test_analysis.py  test_api.py  test_bench_inference.py  test_cleanup.py  test_compound_loss.py  test_dataset_loaders.py  test_evaluate_local_vllm.py  test_evaluate_models.py  test_fix_flashinfer_nvcc.py  test_fix_flashinfer_nvcc.sh  test_metric.py  test_risk_measures.py  test_routing.py  test_ruin.py  test_sensitivity.py  test_summarize_smoke.py  test_taxonomy.py  test_validation.py  test_visualization.py
